Fixed some query errors introduced by recent redesign.
svn path=/trunk/eXist-1.0/; revision=865


Former-commit-id: 923702659405256598e89b59ccd7b1265023c739